# personal-llm-wiki-langchain

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/litespec-adopt/: SKILL.md
.agents/skills/litespec-apply/: SKILL.md
.agents/skills/litespec-explore/: SKILL.md
.agents/skills/litespec-grill/: SKILL.md
.agents/skills/litespec-propose/: SKILL.md
.agents/skills/litespec-review/: SKILL.md
specs/changes/obsidian-compat/: .litespec.yaml  design.md  proposal.md  tasks.md
specs/changes/obsidian-compat/specs/frontmatter-validation/: spec.md
specs/changes/obsidian-compat/specs/page-format/: spec.md
specs/changes/wiki-cli/: .litespec.yaml  design.md  proposal.md  tasks.md
specs/changes/wiki-cli/specs/agent-tools/: spec.md
specs/changes/wiki-cli/specs/chunking-pipeline/: spec.md
specs/changes/wiki-cli/specs/cli-commands/: spec.md
specs/changes/wiki-cli/specs/git-protocol/: spec.md
specs/changes/wiki-cli/specs/middleware/: spec.md
specs/changes/wiki-cli/specs/project-structure/: spec.md
specs/changes/wiki-cli/specs/rag-discovery/: spec.md
src/wiki/: agent.py  checkpointing.py  chunking_core.py  cli.py  config.py  ingest_graph.py  observability.py  slash_commands.py  streaming.py  telegram_client.py  telegram_state.py  tui.py
src/wiki/commands/: chat.py  ingest.py  init.py  query.py  reindex.py  telegram.py
src/wiki/middleware/: linter.py
src/wiki/rag/: chroma_store.py
src/wiki/tools/: chunking.py  filesystem.py  git.py  rag.py
tests/: test_cli.py  test_linter_middleware.py
