[project]
name = "wiki"
version = "0.1.0"
description = "Personal LLM wiki powered by LangChain"
readme = "README.md"
authors = [
    { name = "bermudi", email = "github.igizp@dabg.uk" }
]
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textual>=8.2.3",
    "typer>=0.24.1",
]

[project.scripts]
wiki = "wiki.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
